--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "symfony/process": "*"
+        "php": ">=7.1"
     },
     "autoload": {
         "psr-4": {
